Fixing secondary pages on Mobile

--- a/css/content.css
+++ b/css/content.css
@@ -2,7 +2,6 @@
  * Charlie Lees
  * Style Pages for non-landing Page(s)
  */
-
 html{
   box-sizing: border-box;
   min-height: 100vh;
@@ -28,6 +27,8 @@ body{
   display: table;
 }
 img.logo{
+    /*height: 200px;
+    width: 200px;*/
     height:auto;
     width: 100%;
     min-width: 100px;
@@ -54,12 +55,60 @@ table{
 
 @media (max-width:500px){
     .whitespace span{
-    margin: 0px 0px 0px 0px;
-  }
+        margin: 0px 0px 0px 0px;
+    }
     .wrapper h1{
-    padding: 10px 10px 10px 10px;
+        padding: 10px 10px 10px 10px;
     }
     .wrapper{
-    padding: 0px 0px 0px 0px;
+        padding: 0px 0px 0px 0px;
+    }
+    
+    table {
+        display: block;
+        width: 100%;
+    }
+    
+    table tr {
+        display: block;
+        margin-bottom: 10px;
+    }
+    
+    table td {
+        display: block;
+        width: 100% !important;
+        text-align: center;
+    }
+    
+    td.logo {
+        margin-bottom: 15px;
+        padding: 10px;
+    }
+    
+    img.logo {
+        max-width: 150px;
+        width: auto;
+        height: auto;
+        margin: 0 auto;
+        display: block;
+    }
+    
+    td.description {
+        margin: 10px 5px;
+        padding: 15px;
+        text-align: left;
+    }
+    
+    td.whitespace {
+        display: none;
+    }
+    
+    .wrapper section {
+        margin-bottom: 20px;
+    }
+    
+    .wrapper {
+        padding: 5px;
+        width: 95%;
     }
 }
