--- a/css/header.css
+++ b/css/header.css
@@ -20,15 +20,21 @@ body{
 
 @media only screen and (max-width: 500px){
     .header{
-        height: 50px;
+        height: 60px; 
+        padding: 5px;
     }
 
     body{
-        margin-top: 50px;
+        margin-top: 65px; 
     }
 
-     .header h1{
-        margin-top: 0;
+    .header h1{
+        margin-top: 5px;
+        margin-bottom: 5px;
+        font-size: 1.2em; 
+        line-height: 1.2;
+        padding: 0 10px; 
+        word-wrap: break-word; 
     }
   
 }
